* renamed include/yog/insts.h to include/yog/opcodes.h.
--HG--
rename : include/yog/insts.h.tmpl => include/yog/opcodes.h.tmpl
rename : include/yog/insts.h => include/yog/opcodes.h

--HG--
extra : convert_revision : 4e39536317c45cb7f0f516b0a75e812794c44d42

--- a/include/yog/opcodes.h.tmpl
+++ b/include/yog/opcodes.h.tmpl
@@ -4,13 +4,13 @@
 extern "C" {
 #endif
 
-#define INST(name)  INST_##name
+#define OP(name)  OP_##name
 
-enum Inst {
-${insts}
+enum OpCode {
+${opcodes}
 };
 
-typedef enum Inst Inst;
+typedef enum OpCode OpCode;
 
 #if defined(__cplusplus)
 }
