--- a/Makefile.am.tmpl
+++ b/Makefile.am.tmpl
@@ -1,7 +1,7 @@
 bin_PROGRAMS = yog
 yog_SOURCES = @SOURCES@
 yog_CFLAGS = -Iinclude -Wall
-AM_YFLAGS = -d
+AM_YFLAGS = -d --verbose
 #AM_LFLAGS = --noline
 
 proto:
