* changed YogInst structure.
--HG--
extra : convert_revision : 1fa8ba04d2b186cb4a325bffac1a976abeed5fde

--- a/include/yog/inst.h.tmpl
+++ b/include/yog/inst.h.tmpl
@@ -1,10 +1,14 @@
-#ifndef __YOG_INSTS_H__
-#define __YOG_INSTS_H__
+#ifndef __YOG_INST_H__
+#define __YOG_INST_H__
 
 struct YogInst {
     YOGGCOBJ_HEAD;
 
-${union}
+    struct YogInst* next;
+    enum InstType type;
+    union {
+${structs}
+    } u;
 };
 
 ${macros}
