* changed compiler to use internal data structure.
--HG--
extra : convert_revision : 7319b759a745318e9cd55b9a830cc717bd7d63c8

--- a/include/yog/inst.h.tmpl
+++ b/include/yog/inst.h.tmpl
@@ -1,16 +1,21 @@
 #ifndef __YOG_INST_H__
 #define __YOG_INST_H__
 
+#include "yog/opcodes.h"
+
 struct YogInst {
     YOGGCOBJ_HEAD;
 
     struct YogInst* next;
+
     enum InstType type;
+    enum OpCode operand;
     union {
 ${structs}
     } u;
 };
 
+#define INST_OPERAND(inst)  ((inst)->operand)
 ${macros}
 
 typedef struct YogInst YogInst;
