* fixed the bug on class statement.
--HG--
extra : convert_revision : e3f1b493db01b133ae85010d4b9cea84920d20dd

--- a/src/compile.inc.tmpl
+++ b/src/compile.inc.tmpl
@@ -9,13 +9,22 @@ insts2bin(YogEnv* env, YogInst* inst)
 #undef INIT_BIN_SIZE
 
     while (inst != NULL) {
-        if (inst->type == INST_OP) {
-            switch (INST_OPCODE(inst)) {
+        switch (inst->type) {
+            case INST_OP:
+                {
+                    switch (INST_OPCODE(inst)) {
 ${insts2bin}
-            default:
-                Yog_assert(env, FALSE, "Unkown instruction.");
-                break;
+                    default:
+                        Yog_assert(env, FALSE, "Unkown instruction.");
+                    break;
+                }
             }
+            case INST_ANCHOR:
+            case INST_LABEL:
+                break;
+            default:
+                Yog_assert(env, FALSE, "Unknown inst type.");
+                break;
         }
 
         inst = inst->next;
