* changed lexer implementation to src/lexer.c.
--HG--
extra : convert_revision : 7690f7c8f0014a81d4d95b35478455d23f0ed0fe

--- a/Makefile.am.tmpl
+++ b/Makefile.am.tmpl
@@ -19,4 +19,7 @@ test: yog$(EXEEXT)
 clean-generic:
 	find . -name "*.pyc" -print0 | xargs --null rm -f
 
+src/keywords.inc: src/keywords
+	gperf $< > $@
+
 # vim: tabstop=8 shiftwidth=8 noexpandtab filetype=automake
