--- a/Makefile.am.tmpl
+++ b/Makefile.am.tmpl
@@ -1,6 +1,6 @@
 bin_PROGRAMS = yog
 yog_SOURCES = @SOURCES@
-yog_CFLAGS = -Iinclude -Wall
+yog_CFLAGS = -Iinclude -Ionig -Wall
 AM_YFLAGS = -d --verbose
 #AM_LFLAGS = --noline
 
@@ -21,5 +21,7 @@ clean-generic:
 
 src/keywords.inc: src/keywords
 	gperf $< > $@
+
+src/lexer.c: parser.h
 
 # vim: tabstop=8 shiftwidth=8 noexpandtab filetype=automake
