* added SUBDIRS setting.
--HG--
extra : convert_revision : 48649341d267eb35bc443f03fc61e07ef69b5d00

--- a/Makefile.am.tmpl
+++ b/Makefile.am.tmpl
@@ -4,6 +4,8 @@ yog_CFLAGS = -Iinclude -Ionig -Wall
 AM_YFLAGS = -d --verbose
 #AM_LFLAGS = --noline
 
+SUBDIRS = onig
+
 proto:
 	python tools/update_prototype.py
 
