--- a/Makefile.am.tmpl
+++ b/Makefile.am.tmpl
@@ -11,6 +11,9 @@ yog_LDADD = $(ONIG_LIB)
 AM_YFLAGS = -d --verbose
 #AM_LFLAGS = --noline
 
+INSTS_DEF = src/insts.def
+INST_PY = tools/inst.py
+
 proto:
 	python tools/update_prototype.py
 
@@ -31,7 +34,13 @@ src/keywords.inc: src/keywords
 
 src/lexer.c: parser.h
 
-src/thread.inc src/code.inc src/compile.inc: src/insts.def tools/inst.py
+src/thread.inc: $(INSTS_DEF) $(INST_PY)
+	make insts
+
+src/code.inc: src/code.inc.tmpl $(INSTS_DEF) $(INST_PY)
+	make insts
+
+src/compile.inc: src/compile.inc.tmpl $(INSTS_DEF) $(INST_PY)
 	make insts
 
 # vim: tabstop=8 shiftwidth=8 noexpandtab filetype=automake
