* changed Yog_assert function to YOG_ASSERT macro.
--HG--
extra : convert_revision : 00a2b61f3902ab2c99d56a4dadc187dccf773cce

--- a/src/compile.inc.tmpl
+++ b/src/compile.inc.tmpl
@@ -16,7 +16,7 @@ insts2bin(YogEnv* env, YogInst* inst)
 ${insts2bin}
                         default:
                             {
-                                Yog_assert(env, FALSE, "Unkown instruction.");
+                                YOG_ASSERT(env, FALSE, "Unkown instruction.");
                                 break;
                             }
                     }
@@ -25,7 +25,7 @@ ${insts2bin}
             case INST_LABEL:
                 break;
             default:
-                Yog_assert(env, FALSE, "Unknown inst type.");
+                YOG_ASSERT(env, FALSE, "Unknown inst type.");
                 break;
         }
 
@@ -51,12 +51,12 @@ count_stack_size(YogEnv* env, YogInst* inst)
 ${count_stack_size}
                         default:
                             {
-                                Yog_assert(env, FALSE, "Unkown instruction.");
+                                YOG_ASSERT(env, FALSE, "Unkown instruction.");
                                 break;
                             }
                     }
                     size += push_size - pop_size;
-                    Yog_assert(env, 0 <= size, "Too many pops.");
+                    YOG_ASSERT(env, 0 <= size, "Too many pops.");
                     if (max < size) {
                         max = size;
                     }
@@ -66,7 +66,7 @@ ${count_stack_size}
             case INST_LABEL:
                 break;
             default:
-                Yog_assert(env, FALSE, "Unknown inst type.");
+                YOG_ASSERT(env, FALSE, "Unknown inst type.");
                 break;
         }
 
