* Makefile.am.tmpl: added rules of "test-copying" and "test-mark-sweep".
--HG--
extra : convert_revision : acec7eef03ed0e7b9fde38b6b030cdc39a45ae42

--- a/Makefile.am.tmpl
+++ b/Makefile.am.tmpl
@@ -25,7 +25,13 @@ am:
 	python tools/update_automake.py
 
 test: yog$(EXEEXT)
+	make test-copying
+	make test-mark-sweep
+
+test-copying: 
 	GC=COPYING py.test
+
+test-mark-sweep:
 	GC=MARK-SWEEP py.test
 
 clean-generic:
