* tests/__init__.py (TestCase#_test): changed to test BDW gc.
--HG--
extra : convert_revision : fa2e88a9711d3d638c83956eb40ef5cca7a71387

--- a/Makefile.am.tmpl
+++ b/Makefile.am.tmpl
@@ -30,12 +30,16 @@ am:
 test: yog$(EXEEXT)
 	make test-copying
 	make test-mark-sweep
+	make test-bdw
 
 test-copying: 
-	GC=COPYING py.test
+	GC=copying py.test
 
 test-mark-sweep:
-	GC=MARK-SWEEP py.test
+	GC=mark-sweep py.test
+
+test-bdw:
+	GC=bdw py.test
 
 clean-generic:
 	find . -name "*.pyc" -print0 | xargs --null rm -f
