* changed to use BDW garbage collection.
--HG--
extra : convert_revision : ecad0f723ce1cf12e6b17ba1e864fa78a59b6825

--- a/Makefile.am.tmpl
+++ b/Makefile.am.tmpl
@@ -9,7 +9,7 @@ SUBDIRS = $(BDWGC_DIR) $(ONIG_DIR)
 bin_PROGRAMS = yog
 yog_SOURCES = @SOURCES@
 yog_CFLAGS = -Iinclude -I$(ONIG_DIR) -I$(BDWGC_DIR)/include -Wall
-yog_LDADD = $(BDWGC_LIB) $(ONIG_LIB)
+yog_LDADD = $(BDWGC_LIB) $(ONIG_LIB) -lpthread
 
 AM_YFLAGS = -d --verbose
 #AM_LFLAGS = --noline
