* changed to post outputz.com.
--HG--
extra : convert_revision : 1a2ef2c3e7be6d727c6b7260a91dc9b335545b3b

--- a/Makefile.am.tmpl
+++ b/Makefile.am.tmpl
@@ -68,4 +68,7 @@ include/yog/inst.h: include/yog/inst.h.tmpl $(INSTS_DEF) $(INST_PY)
 Makefile.am: Makefile.am.tmpl
 	$(GEN_AM_CMD)
 
+push: 
+	PYTHONPATH=. hg push
+
 # vim: tabstop=8 shiftwidth=8 noexpandtab filetype=automake
