--- a/Makefile.am.tmpl
+++ b/Makefile.am.tmpl
@@ -47,6 +47,7 @@ test-bdw:
 
 clean-generic:
 	find . -name "*.pyc" -print0 | xargs --null rm -f
+	rm -f vgcore.*
 
 src/keywords.inc: src/keywords
 	gperf $< > $@
