--- a/src/compile.inc.tmpl
+++ b/src/compile.inc.tmpl
@@ -4,29 +4,33 @@ ${compile_data}
 static YogBinary* 
 insts2bin(YogEnv* env, YogInst* inst) 
 {
+    FRAME_DECL_LOCAL(env, inst_idx, PTR2VAL(inst));
+
 #define INIT_BIN_SIZE   (0)
     YogBinary* code = YogBinary_new(env, INIT_BIN_SIZE);
 #undef INIT_BIN_SIZE
 
+    FRAME_LOCAL_PTR(env, inst, inst_idx);
     while (inst != NULL) {
         switch (inst->type) {
-            case INST_OP:
-                {
-                    switch (INST_OPCODE(inst)) {
+        case INST_OP:
+            {
+                switch (INST_OPCODE(inst)) {
 ${insts2bin}
-                        default:
-                            {
-                                YOG_ASSERT(env, FALSE, "Unkown instruction.");
-                                break;
-                            }
+                default:
+                    {
+                        YOG_ASSERT(env, FALSE, "Unkown instruction.");
+                        break;
                     }
                 }
-            case INST_ANCHOR:
-            case INST_LABEL:
                 break;
-            default:
-                YOG_ASSERT(env, FALSE, "Unknown inst type.");
-                break;
+            }
+        case INST_ANCHOR:
+        case INST_LABEL:
+            break;
+        default:
+            YOG_ASSERT(env, FALSE, "Unknown inst type.");
+            break;
         }
 
         inst = inst->next;
@@ -43,31 +47,31 @@ count_stack_size(YogEnv* env, YogInst* inst)
 
     while (inst != NULL) {
         switch (inst->type) {
-            case INST_OP:
-                {
-                    int pop_size = 0;
-                    int push_size = 0;
-                    switch (INST_OPCODE(inst)) {
+        case INST_OP:
+            {
+                int pop_size = 0;
+                int push_size = 0;
+                switch (INST_OPCODE(inst)) {
 ${count_stack_size}
-                        default:
-                            {
-                                YOG_ASSERT(env, FALSE, "Unkown instruction.");
-                                break;
-                            }
+                default:
+                    {
+                        YOG_ASSERT(env, FALSE, "Unkown instruction.");
+                        break;
                     }
-                    size += push_size - pop_size;
-                    YOG_ASSERT(env, 0 <= size, "Too many pops.");
-                    if (max < size) {
-                        max = size;
-                    }
-                    break;
                 }
-            case INST_ANCHOR:
-            case INST_LABEL:
+                size += push_size - pop_size;
+                YOG_ASSERT(env, 0 <= size, "Too many pops.");
+                if (max < size) {
+                    max = size;
+                }
                 break;
-            default:
-                YOG_ASSERT(env, FALSE, "Unknown inst type.");
-                break;
+            }
+        case INST_ANCHOR:
+        case INST_LABEL:
+            break;
+        default:
+            YOG_ASSERT(env, FALSE, "Unknown inst type.");
+            break;
         }
 
         inst = inst->next;
