* implemented nonlocal variables.
--HG--
extra : convert_revision : 7e5f06bc7b69f5ece6377a69dcf1c5de611b9e9e

--- a/src/code.inc.tmpl
+++ b/src/code.inc.tmpl
@@ -1,8 +1,8 @@
 
-static char* 
-get_op_name(OpCode op) 
+const char* 
+YogCode_get_op_name(OpCode op) 
 {
-    char* op_names[] = {
+    const char* op_names[] = {
 ${op_names}
     };
 
