renamed "align" to "round".
--HG--
extra : convert_revision : 85886ad9d7a20ba4f66ed9e61947657471340cb2

--- a/Makefile.am.tmpl
+++ b/Makefile.am.tmpl
@@ -34,6 +34,7 @@ am:
 test: yog$(EXEEXT)
 	make test-copying
 	make test-mark-sweep
+	make test-mark-sweep-compact
 	make test-bdw
 
 test-copying: 
