changed to use lemon parser generator.
--HG--
extra : convert_revision : d6d36e57142fc949957e13f476ee8f0bdcb64622

--- a/src/Makefile.am.tmpl
+++ b/src/Makefile.am.tmpl
@@ -27,13 +27,9 @@ insts:
 am:
 	$(GEN_AM_CMD)
 
-.y.c:
+parser.c: parser.y parser.lt $(LEMON)
 	(cd $(LEMON_DIR); make)
-	$(LEMON) $<
-
-#parser.c: parser.lt parser.y $(LEMON)
-#	(cd $(LEMON_DIR); make)
-#	$(LEMON) parser.y
+	$(LEMON) parser.y
 
 keywords.inc: keywords
 	gperf $< > $@
