implemented copying GC's tests.
--HG--
extra : convert_revision : 566bbecbd37300180072b6cf5d46232e9497a707

--- a/src/Makefile.am.tmpl
+++ b/src/Makefile.am.tmpl
@@ -10,7 +10,7 @@ YACC = $(LEMON)
 BUILT_SOURCES = parser.h keywords.inc
 
 lib_LTLIBRARIES = libyog.la
-libyog_la_SOURCES = @SOURCES@ gc/mark-sweep-compact.c
+libyog_la_SOURCES = @SOURCES@
 libyog_la_CFLAGS = -I$(ROOT_DIR)/include -I$(ONIG_DIR) -I$(BDWGC_DIR)/include -Wall
 
 INSTS_DEF = insts.def
