--- a/src/Makefile.am.tmpl
+++ b/src/Makefile.am.tmpl
@@ -9,9 +9,20 @@ YACC = $(LEMON)
 
 BUILT_SOURCES = parser.h keywords.inc
 
-lib_LTLIBRARIES = libyog.la
-libyog_la_SOURCES = @SOURCES@
-libyog_la_CFLAGS = -I$(ROOT_DIR)/include -I$(ONIG_DIR) -I$(BDWGC_DIR)/include -Wall
+lib_LTLIBRARIES = libyog-copying.la \
+		  libyog-mark-sweep.la \
+		  libyog-mark-sweep-compact.la \
+		  libyog-bdw.la
+COMMON_SOURCES = @SOURCES@
+COMMON_CFLAGS = -I$(ROOT_DIR)/include -I$(ONIG_DIR) -I$(BDWGC_DIR)/include -Wall
+libyog_copying_la_SOURCES = $(COMMON_SOURCES) gc/copying.c
+libyog_copying_la_CFLAGS = $(COMMON_CFLAGS)
+libyog_mark_sweep_la_SOURCES = $(COMMON_SOURCES) gc/mark-sweep.c
+libyog_mark_sweep_la_CFLAGS = $(COMMON_CFLAGS)
+libyog_mark_sweep_compact_la_SOURCES = $(COMMON_SOURCES) gc/mark-sweep-compact.c
+libyog_mark_sweep_compact_la_CFLAGS = $(COMMON_CFLAGS)
+libyog_bdw_la_SOURCES = $(COMMON_SOURCES) gc/bdw.c
+libyog_bdw_la_CFLAGS = $(COMMON_CFLAGS)
 
 INSTS_DEF = insts.def
 INST_PY = $(ROOT_DIR)/tools/inst.py
