removed files for YogToken. YogToken_new is moved to src/lexer.c.
--HG--
extra : convert_revision : 63a69dd1506a312b9130330b1a761d89a168a8fc

--- a/src/Makefile.am.tmpl
+++ b/src/Makefile.am.tmpl
@@ -15,13 +15,13 @@ lib_LTLIBRARIES = libyog-copying.la \
 		  libyog-bdw.la
 COMMON_SOURCES = @SOURCES@
 COMMON_CFLAGS = -I$(ROOT_DIR)/include -I$(ONIG_DIR) -I$(BDWGC_DIR)/include -Wall
-libyog_copying_la_SOURCES = $(COMMON_SOURCES) gc/copying.c
+libyog_copying_la_SOURCES = $(COMMON_SOURCES)
 libyog_copying_la_CFLAGS = $(COMMON_CFLAGS)
-libyog_mark_sweep_la_SOURCES = $(COMMON_SOURCES) gc/mark-sweep.c
+libyog_mark_sweep_la_SOURCES = $(COMMON_SOURCES)
 libyog_mark_sweep_la_CFLAGS = $(COMMON_CFLAGS)
-libyog_mark_sweep_compact_la_SOURCES = $(COMMON_SOURCES) gc/mark-sweep-compact.c
+libyog_mark_sweep_compact_la_SOURCES = $(COMMON_SOURCES)
 libyog_mark_sweep_compact_la_CFLAGS = $(COMMON_CFLAGS)
-libyog_bdw_la_SOURCES = $(COMMON_SOURCES) gc/bdw.c
+libyog_bdw_la_SOURCES = $(COMMON_SOURCES)
 libyog_bdw_la_CFLAGS = $(COMMON_CFLAGS)
 
 INSTS_DEF = insts.def
