--- a/src/Makefile.am.tmpl
+++ b/src/Makefile.am.tmpl
@@ -12,7 +12,8 @@ BUILT_SOURCES = parser.h keywords.inc
 lib_LTLIBRARIES = libyog-copying.la \
 		  libyog-mark-sweep.la \
 		  libyog-mark-sweep-compact.la \
-		  libyog-bdw.la
+		  libyog-bdw.la \
+		  libyog-generational.la
 COMMON_SOURCES = @SOURCES@
 COMMON_CFLAGS = -I$(ROOT_DIR)/include -I$(ONIG_DIR) -I$(BDWGC_DIR)/include -Wall
 libyog_copying_la_SOURCES = $(COMMON_SOURCES) gc/copying.c
@@ -23,6 +24,9 @@ libyog_mark_sweep_compact_la_SOURCES = $(COMMON_SOURCES) gc/mark-sweep-compact.c
 libyog_mark_sweep_compact_la_CFLAGS = $(COMMON_CFLAGS) -DGC_MARK_SWEEP_COMPACT
 libyog_bdw_la_SOURCES = $(COMMON_SOURCES) gc/bdw.c
 libyog_bdw_la_CFLAGS = $(COMMON_CFLAGS) -DGC_BDW
+libyog_generational_la_SOURCES = $(COMMON_SOURCES) gc/generational.c \
+				 gc/copying.c gc/mark-sweep-compact.c
+libyog_generational_la_CFLAGS = $(COMMON_CFLAGS) -DGC_GENERATIONAL
 
 INSTS_DEF = insts.def
 INST_PY = $(ROOT_DIR)/tools/inst.py
