changed to use tagged pointer.
--HG--
extra : convert_revision : 5adb775a00ff93dcf27295be403fe5f3cebc1275

--- a/include/yog/inst.h.tmpl
+++ b/include/yog/inst.h.tmpl
@@ -13,7 +13,7 @@ enum InstType {
 typedef enum InstType InstType;
 
 struct YogInst {
-    struct YogVal next;
+    YogVal next;
 
     enum InstType type;
     enum OpCode opcode;
