Added -export-dynamic linker option to call initializer of .so package. closes 36.
--HG--
extra : convert_revision : 3635bd7f042290536af4044bc037ce96b9da0bad

--- a/src/Makefile.am.tmpl
+++ b/src/Makefile.am.tmpl
@@ -11,7 +11,7 @@ YACC = $(LEMON)
 BUILT_SOURCES = parser.h keywords.inc
 COMMON_SOURCES = @SOURCES@
 CFLAGS_COMMON = -I$(ROOT_DIR)/include -I$(ONIG_DIR) -I$(BDWGC_DIR)/include -Wall
-LDFLAGS_COMMON = $(ONIG_DIR)/.libs/libonig.a -ldl
+LDFLAGS_COMMON = $(ONIG_DIR)/.libs/libonig.a -ldl -export-dynamic
 
 EXTRA_PROGRAMS = yog-bdw yog-copying yog-mark-sweep yog-mark-swee-compact \
 		 yog-mark-sweep-compact yog-generational
