--- a/src/Makefile.am.tmpl
+++ b/src/Makefile.am.tmpl
@@ -11,7 +11,8 @@ YACC = $(LEMON)
 
 BUILT_SOURCES = parser.h keywords.inc
 COMMON_SOURCES = @SOURCES@
-CFLAGS_COMMON = -I$(ROOT_DIR)/include -I$(ONIG_DIR) -I$(BDWGC_DIR)/include -Wall
+CFLAGS_COMMON = -I$(ROOT_DIR)/include -I$(ONIG_DIR) -I$(BDWGC_DIR)/include \
+		-I$(GMP_DIR) -Wall
 LDFLAGS_COMMON = $(ONIG_DIR)/.libs/libonig.a -ldl -export-dynamic \
 		 $(GMP_DIR)/.libs/libgmp.a
 
