--- a/src/inst.c.tmpl
+++ b/src/inst.c.tmpl
@@ -2,10 +2,10 @@
 #include "yog/opcodes.h"
 #include "yog/yog.h"
 
-unsigned int 
+uint_t
 Yog_get_inst_size(OpCode op)
 {
-    unsigned int inst2size[] = {
+    uint_t inst2size[] = {
 ${inst2size}
     };
 
