--- a/include/yog/inst.h.tmpl
+++ b/include/yog/inst.h.tmpl
@@ -21,9 +21,9 @@ struct YogInst {
 ${structs}
     } u;
 
-    unsigned int lineno;
+    uint_t lineno;
     pc_t pc;
-    unsigned int size;
+    uint_t size;
 };
 
 #define INST_OPCODE(v)  (INST(v)->opcode)
@@ -40,7 +40,7 @@ typedef struct YogInst YogInst;
  */
 
 /* src/inst.c */
-unsigned int Yog_get_inst_size(OpCode);
+uint_t Yog_get_inst_size(OpCode);
 
 /* PROTOTYPE_END */
 
