add a test for return statement in block.
--HG--
extra : convert_revision : 8c71de0d4cf9cfd2a5a9d09f99a83ec61807168b

--- a/src/Makefile.am.tmpl
+++ b/src/Makefile.am.tmpl
@@ -55,9 +55,9 @@ insts:
 am:
 	$(GEN_AM_CMD)
 
-builtins.inc: miniyog builtins.yg conv_builtins.yg
+builtins.inc: miniyog builtins.yg yg2inc.yg
 	$(MAKE) miniyog
-	./miniyog conv_builtins.yg builtins.yg $@
+	./miniyog yg2inc.yg builtins.yg $@
 
 parser.h parser.c: parser.y parser.lt $(LEMON)
 	(cd $(LEMON_DIR); $(MAKE))
