--- a/src/Makefile.am.tmpl
+++ b/src/Makefile.am.tmpl
@@ -59,6 +59,10 @@ builtins.inc: miniyog builtins.yg yg2inc.yg
 	$(MAKE) miniyog
 	./miniyog yg2inc.yg builtins.yg $@
 
+array.inc: miniyog array.yg yg2inc.yg
+	$(MAKE) miniyog
+	./miniyog yg2inc.yg array.yg $@
+
 parser.h parser.c: parser.y parser.lt $(LEMON)
 	(cd $(LEMON_DIR); $(MAKE))
 	$(LEMON) parser.y
