implement Array#to_s.
implement Dict#each.

implement Object#inspect, Symbol#inspect and String#inspect.

--HG--
extra : convert_revision : e5dc0cdc6ff725d6a667e53e32b4ae5f41350e6f

--- a/src/Makefile.am.tmpl
+++ b/src/Makefile.am.tmpl
@@ -63,6 +63,18 @@ array.inc: miniyog array.yg yg2inc.yg
 	$(MAKE) miniyog
 	./miniyog yg2inc.yg array.yg $@
 
+object.inc: miniyog object.yg yg2inc.yg
+	$(MAKE) miniyog
+	./miniyog yg2inc.yg object.yg $@
+
+string.inc: miniyog string.yg yg2inc.yg
+	$(MAKE) miniyog
+	./miniyog yg2inc.yg string.yg $@
+
+dict.inc: miniyog dict.yg yg2inc.yg
+	$(MAKE) miniyog
+	./miniyog yg2inc.yg dict.yg $@
+
 parser.h parser.c: parser.y parser.lt $(LEMON)
 	(cd $(LEMON_DIR); $(MAKE))
 	$(LEMON) parser.y
