Changed to configure stack size of child threads.

--- a/src/inst.c.tmpl
+++ b/src/inst.c.tmpl
@@ -5,7 +5,7 @@
 #include "yog/opcodes.h"
 #include "yog/yog.h"
 
-#if !defined(uint8_t)
+#if defined(_MSC_VER)
 typedef unsigned char   uint8_t;
 #endif
 
