--- a/src/Makefile.am.tmpl
+++ b/src/Makefile.am.tmpl
@@ -12,8 +12,7 @@ PYTHON = python2.6
 BUILT_SOURCES = parser.h keywords.inc
 COMMON_SOURCES = @SOURCES@
 CFLAGS_COMMON = -I$(ROOT_DIR)/include -I$(ONIG_DIR) -I$(BDWGC_DIR)/include \
-		-I$(GMP_DIR) -Wall -DPREFIX=\"$(prefix)\" -D_XOPEN_SOURCE=500 \
-		-D_BSD_SOURCE @CFLAGS_COMMON@
+		-I$(GMP_DIR) -Wall -DPREFIX=\"$(prefix)\" @CFLAGS_COMMON@
 LDFLAGS_COMMON = -export-dynamic @LDFLAGS_COMMON@
 LIBS = $(ONIG_DIR)/.libs/libonig.a $(GMP_DIR)/.libs/libgmp.a -lm @LIBS@
 
