--- a/doc/default.css
+++ b/doc/default.css
@@ -7,6 +7,7 @@ h1, h2 {
   background-color: #000000;
   color: #ffffff;
   padding: 10px 10px 10px 10px;
+  margin: 0px -20px 0px 0px;
 }
 
 body {
