--- a/doc/default.css
+++ b/doc/default.css
@@ -3,20 +3,32 @@ dl {
   margin: 0px 10px 0px 10px;
 }
 
-h1, h2 {
+h1 {
   background-color: #000000;
   color: #ffffff;
-  padding: 10px 10px 10px 10px;
   margin: 0px -20px 0px 0px;
+  padding: 10px;
+}
+
+h2 {
+  background-color: #000000;
+  color: #ffffff;
+  padding: 0px 10px;
 }
 
 body {
-  background-color: #efefef;
+  background-color: #f5f5f5;
   margin: 0px 0px 0px 0px;
 }
 
 p {
   margin: 10px 10px 10px 10px;
+}
+
+div.header {
+  color: #ffffff;
+  background-color: #800000;
+  text-align: center;
 }
 
 /**
