--- a/doc/default.css
+++ b/doc/default.css
@@ -5,6 +5,8 @@ dl {
 
 h1 {
   background-color: #000000;
+  border-left: 1px solid #696969;
+  border-top: 1px solid #696969;
   color: #ffffff;
   margin: 0px -20px 0px 0px;
   padding: 10px;
@@ -12,6 +14,8 @@ h1 {
 
 h2 {
   background-color: #000000;
+  border-left: 1px solid #696969;
+  border-top: 1px solid #696969;
   color: #ffffff;
   padding: 0px 10px;
 }
