--- a/doc/default.css
+++ b/doc/default.css
@@ -1,6 +1,6 @@
 
 dl {
-  margin: 0px 10px 0px 10px;
+  margin: 10px;
 }
 
 h1 {
@@ -8,6 +8,7 @@ h1 {
   border-left: 1px solid #696969;
   border-top: 1px solid #696969;
   color: #ffffff;
+  font-size: 200%;
   margin: 0px -20px 0px 0px;
   padding: 10px;
 }
@@ -17,7 +18,35 @@ h2 {
   border-left: 1px solid #696969;
   border-top: 1px solid #696969;
   color: #ffffff;
+  font-size: 160%;
   padding: 0px 10px;
+}
+
+h3 {
+  border-bottom: 1px solid #000000;
+  border-left: 4px solid #000000;
+  font-size: 140%;
+  padding: 0px 10px;
+}
+
+h4 {
+  font-size: 120%;
+  padding: 0px 10px;
+}
+
+h5 {
+  font-size: 110%;
+  padding: 0px 10px;
+}
+
+h6 {
+  padding: 0px 10px;
+}
+
+pre {
+  border: 1px solid #000000;
+  margin: 0px 10px;
+  padding: 5px 5px;
 }
 
 body {
