--- a/doc/default.css
+++ b/doc/default.css
@@ -24,8 +24,9 @@ h2 {
 
 h3 {
   border-bottom: 1px solid #000000;
-  border-left: 4px solid #000000;
+  border-left: 6px solid #000000;
   font-size: 140%;
+  margin: 0px 10px;
   padding: 0px 10px;
 }
 
@@ -45,17 +46,17 @@ h6 {
 
 pre {
   border: 1px solid #000000;
-  margin: 0px 10px;
-  padding: 5px 5px;
+  margin: 10px 20px;
+  padding: 5px;
 }
 
 body {
   background-color: #f5f5f5;
-  margin: 0px 0px 0px 0px;
+  margin: 0px;
 }
 
 p {
-  margin: 10px 10px 10px 10px;
+  margin: 10px 20px;
 }
 
 div.header {
