--- a/doc/default.css
+++ b/doc/default.css
@@ -46,8 +46,9 @@ h6 {
 
 pre {
   border: 1px solid #000000;
+  font-size: 1.2em;
   margin: 10px 20px;
-  padding: 5px;
+  padding: 5px 10px;
 }
 
 body {
